--- a/style.css
+++ b/style.css
@@ -1,41 +1,28 @@
 /* gradient fallbacks taken from csstricks.com */
 body {
-  background-color: white;
-  /* Safari 4, Chrome 1-9, iOS 3.2-4.3, Android 2.1-3.0 */
-  background-image: -webkit-gradient(linear, left top, right top, from(#0077ff), to(#ffffff));
-
-  /* Safari 5.1, iOS 5.0-6.1, Chrome 10-25, Android 4.0-4.3 */
-  background-image: -webkit-linear-gradient(left, #0077ff, #ffffff);
-
-  /* Firefox 3.6 - 15 */
-  background-image: -moz-linear-gradient(left, #0077ff, #ffffff);
-
-  /* Opera 11.1 - 12 */
-  background-image: -o-linear-gradient(left, #0077ff, #ffffff);
-
-  /* Opera 15+, Chrome 25+, IE 10+, Firefox 16+, Safari 6.1+, iOS 7+, Android 4.4+ */
-  background-image: linear-gradient(to right, #0077ff, #ffffff);
+  background-image: linear-gradient(to left, #0077ff, #ffffff);
   margin: 0px;
   overflow: hidden;
 }
-/*Credit to Billimarie Lubiano Robinson on Codepen for this background gradient*/
 
 #info {
   position: absolute;
-  top: 0px; width: 100%;
+  top: 0px; 
+  width: 100%;
   padding: 5px;
   display: flex;
   justify-content: space-around;
-  text-align: center;
+  text-align: left;
 }
 
 .instructions {
   margin-left: 80px;
   margin-right: 70px;
+  text-align: center;
 }
 
 .movement-info {
-  margin-left: 30px;
+  margin-left: 40px;
 }
 .rules-info {
   margin-right: 30px;
